<?xml version="1.0" encoding="utf-8"?>
<!-- IT19208718 S.M.H.M.Suraweera -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrdersForDistribution"
    android:orientation="vertical"
    android:background="@drawable/bg" >

       <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp">


        <TextView
            android:id="@+id/ordersForDistribution"
            android:layout_width="match_parent"
            android:layout_height="84dp"
            android:fontFamily="@font/amarante"
            android:paddingTop="10dp"
            android:text="@string/orders_for_distribution_welcome"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="36sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.029" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:text="@string/ordered_food_name"
            android:textColor="#FFFFFFFF"
            android:textSize="20dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:text="@string/ordered_food_quantity"
            android:textColor="#FFFFFFFF"
            android:textSize="20dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:text="@string/ordered_food_price"
            android:textColor="#FFFFFFFF"
            android:textSize="20dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:text="@string/ordered_food_delivery_mobile"
            android:textColor="#FFFFFFFF"
            android:textSize="20dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:text="@string/ordered_food_delivery_address"
            android:textColor="#FFFFFFFF"
            android:textSize="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/markAsShipped"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:background="@drawable/rounded_edittext"
                android:text="@string/ordered_food_mark_as_shipped_btn_txt"
                android:textColor="#0027FF" />

            <Button
                android:id="@+id/markAsCancel"
                android:layout_width="150dp"
                android:layout_marginLeft="40dp"
                android:layout_height="50dp"
                android:background="@drawable/rounded_edittext"
                android:text="@string/ordered_food_mark_as_cancel_btn_txt"
                android:textColor="#0027FF" />

        </LinearLayout>




    </LinearLayout>































</LinearLayout>