<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RiderPortal"
    android:background="@drawable/bg">


    <TextView
        android:id="@+id/theRiderName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/amarante"
        android:text="@string/rider_profile"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.029" />


    <ImageView
        android:id="@+id/loadRiderDP"
        android:layout_width="160dp"
        android:layout_height="160dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.188" />

    <Button
        android:id="@+id/OrdersForDistributionButton"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:background="@drawable/rounded_edittext"
        android:text="@string/rider_profile_order_for_distribution"
        android:textColor="#0027FF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.474" />

    <Button
        android:id="@+id/DistributedOrdersButton"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:background="@drawable/rounded_edittext"
        android:text="@string/rider_profile_distributed_orders"
        android:textColor="#0027FF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.717" />

    <Button
        android:id="@+id/MyAccountRiderButton"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:background="@drawable/rounded_edittext"
        android:text="@string/rider_profile_manage_account"
        android:textColor="#0027FF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.822" />

    <Button
        android:id="@+id/riderLogOutButton"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:background="@drawable/rounded_edittext"
        android:text="@string/rider_profile_logout"
        android:textColor="#0027FF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.928" />

    <Button
        android:id="@+id/DailySalesReportButton"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:background="@drawable/rounded_edittext"
        android:text="@string/rider_profile_daily_sales_report"
        android:textColor="#0027FF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.596" />

</androidx.constraintlayout.widget.ConstraintLayout>