<?xml version="1.0" encoding="utf-8"?>
<!-- IT19208718 S.M.H.M.Suraweera -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.rideraccount.RiderAccount"
    android:background="@drawable/bg">

    <TextView
        android:id="@+id/riderName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/amarante"
        android:text="@string/rider_profile"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.029" />


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="212dp"
        android:layout_height="103dp"
        android:src="@drawable/default_picture"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.188" />

    <Button
        android:id="@+id/riderMyAccount"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:background="@drawable/rounded_edittext"
        android:text="@string/rider_profile_manage_account"
        android:textColor="#0027FF"
        android:onClick="onClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.797" />

    <Button
        android:id="@+id/riderOrdersForDistribution"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:background="@drawable/rounded_edittext"
        android:text="@string/rider_profile_order_for_distribution"
        android:textColor="#0027FF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.424" />

    <Button
        android:id="@+id/riderDailySalesReport"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:background="@drawable/rounded_edittext"
        android:text="@string/rider_profile_daily_sales_report"
        android:textColor="#0027FF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.546" />

    <Button
        android:id="@+id/riderDistributedOrders"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:background="@drawable/rounded_edittext"
        android:text="@string/rider_profile_distributed_orders"
        android:textColor="#0027FF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.667" />

    <Button
        android:id="@+id/riderLogOut"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:background="@drawable/rounded_edittext"
        android:text="@string/rider_profile_logout"
        android:textColor="#0027FF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.913" />

</androidx.constraintlayout.widget.ConstraintLayout>