<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".ui.supply.RequestSupplyFragment">

    <TextView
        android:id="@+id/orderItemText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg"
        android:fontFamily="@font/amarante"
        android:text="@string/item_name"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/itemName"
        android:layout_width="296dp"
        android:layout_height="51dp"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/Item_name"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:textColor="#3F51B5"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#0027FF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.335"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/orderQuantity"
        android:layout_width="296dp"
        android:layout_height="51dp"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/order_quantity"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:textColor="#3F51B5"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#0027FF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.458"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/orderAddress"
        android:layout_width="296dp"
        android:layout_height="51dp"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/order_address"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:textColor="#3F51B5"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#0027FF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.576"
        tools:ignore="RtlSymmetry" />


    <EditText
        android:id="@+id/orderMobile"
        android:layout_width="296dp"
        android:layout_height="51dp"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/order_mobile"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:textColor="#B53F3F"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#0027FF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.695"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/sendToSuppliers"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:background="@drawable/rounded_edittext"
        android:text="@string/send_to_suppliers"
        android:textColor="#0027FF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.848" />

</androidx.constraintlayout.widget.ConstraintLayout>